Fix img, WaveDrom overflow issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -496,7 +496,18 @@ td{
 } 
 
 
+img{
+    width:100%;
+    height:auto;
+}
+
 pre{
+    overflow: auto;
+}
+
+.WaveDrom{
+    width:100%;
+    height:auto;   
     overflow: auto;
 }
 
